# lucrezio_semantic_explorer

./: CMakeLists.txt
param/: dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/nodes/: explorer_node.cpp  semantic_explorer_node.cpp
src/semantic_explorer/: CMakeLists.txt  semantic_explorer.cpp  semantic_explorer.h  typical_object_sizes.json
